A/k8s-prod/service-email-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-email-consumer
spec:
  selector:
    matchLabels:
      role: service-email-consumer
  replicas: 1
  template:
    metadata:
      labels:
        role: service-email-consumer
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: service-email-consumer
          image: pairfy/base-consumer
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
