A/k8s-prod/service-gateway-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-gateway-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-gateway-publisher
  template:
    metadata:
      labels:
        role: service-gateway-publisher
    spec:
      containers:
        - name: service-gateway-publisher
          image: pairfy/base-publisher
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
