A/k8s-prod/service-processor-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-processor-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-processor-publisher
  template:
    metadata:
      labels:
        role: service-processor-publisher
    spec:
      containers:
        - name: service-processor-publisher
          image: pairfy/base-publisher
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
