A/k8s-prod/service-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-processor
  template:
    metadata:
      labels:
        app: service-processor
    spec:
      containers:
        - name: service-processor
          image: pairfy/service-processor
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
