A/k8s-prod/frontend-midnight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-midnight
  labels:
    app: frontend-midnight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-midnight
  template:
    metadata:
      labels:
        app: frontend-midnight
    spec:
      containers:
        - name: frontend-midnight
          image: pairfy/frontend-midnight
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-midnight
spec:
  selector:
    app: frontend-midnight
  ports:
    - protocol: TCP
      port: 82
      targetPort: 3000
  type: ClusterIP
