A/k8s-prod/service-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-chat
  template:
    metadata:
      labels:
        role: service-chat
    spec:
      containers:
        - name: service-chat
          image: pairfy/service-chat
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"      
---
apiVersion: v1
kind: Service
metadata:
  name: service-chat
spec:
  selector:
    role: service-chat
  ports:
    - name: service-chat
      protocol: TCP
      port: 8010
      targetPort: 8010
