A/k8s-prod/service-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-email
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-email
  template:
    metadata:
      labels:
        role: service-email
    spec:
      containers:
        - name: service-email
          image: pairfy/service-email
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"    
---
apiVersion: v1
kind: Service
metadata:
  name: service-email
spec:
  selector:
    role: service-email
  ports:
    - name: service-email
      protocol: TCP
      port: 8000
      targetPort: 8000
