A/k8s-prod/service-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-gateway
  template:
    metadata:
      labels:
        role: service-gateway
    spec:
      containers:
        - name: service-gateway
          image: pairfy/service-gateway
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi" 
---
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
spec:
  selector:
    role: service-gateway
  ports:
    - name: service-gateway
      protocol: TCP
      port: 8006
      targetPort: 8006
