A/k8s-prod/service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-notification
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-notification
  template:
    metadata:
      labels:
        role: service-notification
    spec:
      containers:
        - name: service-notification
          image: pairfy/service-notification
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"    

---
apiVersion: v1
kind: Service
metadata:
  name: service-notification
spec:
  selector:
    role: service-notification
  ports:
    - name: service-notification
      protocol: TCP
      port: 8009
      targetPort: 8009
