A/k8s-prod/service-state.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-state
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-state
  template:
    metadata:
      labels:
        role: service-state
    spec:
      containers:
        - name: service-state
          image: pairfy/service-state
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi" 
---
apiVersion: v1
kind: Service
metadata:
  name: service-state
spec:
  selector:
    role: service-state
  ports:
    - name: service-state
      protocol: TCP
      port: 8008
      targetPort: 8008
