A/k8s-prod/service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-user
  template:
    metadata:
      labels:
        role: service-user
    spec:
      containers:
        - name: service-user
          image: pairfy/service-user
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"      
---
apiVersion: v1
kind: Service
metadata:
  name: service-user
spec:
  selector:
    role: service-user
  ports:
    - name: service-user
      protocol: TCP
      port: 8005
      targetPort: 8005
