A/k8s-prod/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.pairfy.io, https://pairfy.io"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Set-Cookie"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "service-chat"


spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pairfy.io
        - '*.pairfy.io'
      secretName: cloudflare-origin-secret
  rules:
    - host: pairfy.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-main
                port:
                  number: 80
